message broker agnostic (#44)
* rename topic arguments to be agnostic to broker

* added eslint and husky pre commit rule

* upgrade dependencies

* ci: :construction_worker: Added github action to run linting on each commit

* migrated to common event store interface

* updated readme

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,10 @@
         "--app-name=ws-gateway-1",
         "--debug",
         "--gateway-name=gateway-1",
+        "--event-store=kafka",
         "--kafka-client-id=gateway-1",
-        "--kafka-user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
-        "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
@@ -32,12 +33,13 @@
         "--app-name=message-delivery",
         "--debug",
         "--mongo-url=${MONGO_URL}",
+        "--event-store=kafka",
         "--kafka-client-id=message-delivery-1",
         "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY}",
-        "--kafka-user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
-        "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
-        "--kafka-ack-topic=${TOPIC_ACK_MESSAGE}",
-        "--kafka-offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
+        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--ack-topic=${TOPIC_ACK_MESSAGE}",
+        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
         "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
@@ -57,13 +59,14 @@
       "args": [
         "--app-name=message-router-1",
         "--debug",
+        "--event-store=kafka",
         "--kafka-client-id=message-router-1",
         "--kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
-        "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
-        "--kafka-new-message-topic=${TOPIC_NEW_MESSAGE}",
-        "--kafka-ack-topic=${TOPIC_ACK_MESSAGE}",
+        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--ack-topic=${TOPIC_ACK_MESSAGE}",
+        "--group-message-topic=${TOPIC_NEW_GROUP_MS}",
         "--kafka-broker-list=${BROKER_LIST}",
-        "--kafka-group-message-topic=${TOPIC_NEW_GROUP_MS}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
         "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}"
@@ -82,11 +85,12 @@
         "--port=4000",
         "--mongo-url=${MONGO_URL}",
         "--firebase-project-id=${FIREBASE_PROJECT_ID}",
+        "--event-store=kafka",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
         "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}",
-        "--kafka-new-login-topic=${TOPIC_NEW_LOGIN}"
+        "--new-login-topic=${TOPIC_NEW_LOGIN}"
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
@@ -119,10 +123,10 @@
         "--debug",
         "--port=4002",
         "--mongo-url=mongodb://localhost:27017/chat",
-        "--json-server-port=${GROUP_MS_JSON_PORT}",
+        "--event-store=kafka",
         "--kafka-client-id=group-1",
         "--kafka-broker-list=${BROKER_LIST}",
-        "--kafka-new-group-message-topic=${TOPIC_NEW_GROUP_MS}"
+        "--new-group-message-topic=${TOPIC_NEW_GROUP_MS}"
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
@@ -135,14 +139,15 @@
       "args": [
         "--app-name=group-message-router-1",
         "--debug",
+        "--event-store=kafka",
         "--kafka-client-id=group-message-router-1",
-        "--kafka-send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
         "--kafka-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER}",
-        "--kafka-new-group-message-topic=${TOPIC_NEW_GROUP_MS}",
+        "--new-group-message-topic=${TOPIC_NEW_GROUP_MS}",
         "--kafka-ack-topic=${TOPIC_ACK_MESSAGE}",
         "--kafka-broker-list=${BROKER_LIST}",
         "--mongo-url=${MONGO_URL}",
-        "--kafka-persistence-message-topic=${TOPIC_DB_MESSAGE}"
+        "--persistence-message-topic=${TOPIC_DB_MESSAGE}"
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
@@ -157,13 +162,14 @@
         "--debug",
         "--mongo-url=${MONGO_URL}",
         "--firebase-admin-credential-json-path=${FIREBASE_ADMIN_CRED_JSON_PATH}",
+        "--event-store=kafka",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
         "--kafka-sasl-username=${KAFKA_SASL_USERNAME}",
         "--kafka-sasl-password=${KAFKA_SASL_PASSWORD}",
         "--kafka-consumer-group=notification-ms",
-        "--kafka-new-login-topic=${TOPIC_NEW_LOGIN}",
-        "--kafka-offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--new-login-topic=${TOPIC_NEW_LOGIN}",
+        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
         "--db-app-initial=${PERSISTENCE_MESSAGE_MS_INITIAL}"
       ],
       "envFile": "${workspaceFolder}/.env",
