--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 
 image:
-  file: .gitpod.Dockerfile
+  file: .gitpod/Dockerfile
 
 ports:
   - port: 8080
@@ -8,19 +8,20 @@ ports:
 
 tasks:
   - init: yarn install
-  - name: Kafka 
+  - name: Kafka
+    init: chmod +x deployment/scripts/*.bash && ./deployment/scripts/setup.bash 
     command: > 
-      chmod +x deployment/dev/scripts/init-kafka.bash &&
-      cp .env.tmpl .env &&
       KAFKA_HOME=/kafka &&
-      ./deployment/dev/scripts/init-kafka.bash $KAFKA_HOME .env
+      ./deployment/scripts/init-kafka.bash $KAFKA_HOME .env
   - name: Nginx
-    command: nginx
+    command: export NGINX_DOCROOT="${GITPOD_REPO_ROOT}/www" && nginx
   - name: mongodb
     command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
   - name: redis
     command:  redis-server 
 
+
 vscode:
   extensions:
     - editorconfig.editorconfig
+    - dbaeumer.vscode-eslint
