--- a/.gitpod/load.nginx.conf
+++ b/.gitpod/load.nginx.conf
@@ -1,4 +1,4 @@
 # This is file will load the main nginx.conf from this directory, This is done as workaround to enable editing of nginx.conf while working
 # as gitpod doesn't allow you to edit nginx.conf once it pushed into the /var/nginx/nginx.conf
-
-include /workspace/chat-server/deployment/dev/config/nginx.conf;
+env GITPOD_REPO_ROOT;
+include /workspace/chat-server/deployment/config/nginx/nginx.dev.conf;
