refactor: :art: seperate out external dependencies from core services
Extract external resources like database, auth provider, push notification from the core implementation. In order to make it easy to support other external resources

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -83,6 +83,7 @@
         "--app-name=profile-ms-1",
         "--debug",
         "--port=4000",
+        "--auth-provider=mock",
         "--mongo-url=${MONGO_URL}",
         "--firebase-project-id=${FIREBASE_PROJECT_ID}",
         "--event-store=kafka",
@@ -135,7 +136,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Group Message Router MS",
-      "program": "${workspaceFolder}/services/message-router-ms/group-message-router-ms.js",
+      "program": "${workspaceFolder}/services/group-ms/group-message-router-ms.js",
       "args": [
         "--app-name=group-message-router-1",
         "--debug",
@@ -161,7 +162,8 @@
         "--app-name=notification-ms-1",
         "--debug",
         "--mongo-url=${MONGO_URL}",
-        "--firebase-admin-credential-json-path=${FIREBASE_ADMIN_CRED_JSON_PATH}",
+        "--pn-service=mock",
+        "--firebase-admin-credential-json-path=${workspaceFolder}/${FIREBASE_ADMIN_CRED_JSON_PATH}",
         "--event-store=kafka",
         "--kafka-broker-list=${BROKER_LIST}",
         "--kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL}",
