--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,9 +16,14 @@ tasks:
   - name: Nginx
     command: export NGINX_DOCROOT="${GITPOD_REPO_ROOT}/www" && nginx
   - name: mongodb
-    command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
+    command: mkdir -p /workspace/data/mongo && mongod --dbpath /workspace/data/mongo
   - name: redis
     command:  redis-server 
+  - name: minio
+    command: >
+      mkdir -p /workspace/data/minio &&
+      export MINIO_ROOT_USER=access_key MINIO_ROOT_PASSWORD=secret_access_key
+      /minio/minio server /workspace/data/minio
 
 
 vscode:
