--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -105,11 +105,13 @@
         "--app-name=file-ms-1",
         "--debug",
         "--port=4001",
+        "--file-metadata-db=mongo",
         "--mongo-url=mongodb://localhost:27017/chat",
         "--base-upload-dir=/workspace/upload",
         "--s3-access-key-id=${S3_ACCESS_KEY_ID}",
         "--s3-secret-access-key=${S3_SECRET_ACCESS_KEY}",
-        "--s3-bucket-name=${S3_BUCKET_NAME}"
+        "--s3-bucket-name=${S3_BUCKET_NAME}",
+        "--file-storage=s3",
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
