--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -44,3 +44,8 @@ services:
       - ${CONFIG_DIR}/firebase/service.json:/app/.service.json:ro
     entrypoint: node
     command: /app/services/notification-ms/notification-ms.js --app-name=notification-ms-1 --new-login-topic=${TOPIC_NEW_LOGIN} --offline-message-topic=${TOPIC_OFFLINE_MESSAGE} --notification-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth --pn-service=firebase --firebase-admin-credential-json-path=/app/.service.json --event-store=kafka --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --kafka-consumer-group=${CONSUMER_GROUP_NOTIFICATION} --offline-msg-initial=${PERSISTENCE_MESSAGE_MS_INITIAL} --kafka-client-id=${NOTIFICATION_CLIENT_ID:-notification-1} --firebase-pn-ttl=${PN_TTL:-86400}
+
+  file:
+    image: ramank775/chatserver:${CHAT_SERVER_TAG}
+    entrypoint: node
+    command: /app/services/file-ms/file-ms.js --app-name=file-ms-1 --host=0.0.0.0 --port=4001 --file-metadata-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth --file-storage=s3 --s3-bucket-name=${S3_BUCKET_NAME} --s3-secret-access-key=${S3_SECRET_ACCESS_KEY} --s3-access-key-id=${S3_ACCESS_KEY_ID} --base-upload-dir=/dev --url-expire-time={URL_EXPIRE_TIME:-3600}
