fixup: nginx docker conf filems upstream

--- a/deployment/config/nginx/nginx.docker.conf
+++ b/deployment/config/nginx/nginx.docker.conf
@@ -49,7 +49,7 @@ http {
     }
     
     upstream file_ms {
-      server 127.0.0.1:4001;
+      server file:4001;
     }
     
     upstream group_ms {
