--- a/deployment/config/nginx/nginx.docker.conf
+++ b/deployment/config/nginx/nginx.docker.conf
@@ -47,7 +47,11 @@ http {
     upstream profile_ms {
         server profile:4000;
     }
-
+    
+    upstream file_ms {
+      server file:4001;
+    }
+    
     upstream group_ms {
         server group:4002;
     }
@@ -105,6 +109,16 @@ http {
 
             rewrite ^/group/(.*) /$1 break;
             proxy_pass http://group_ms;
+        }
+
+        location ~ ^/file/(.*) {
+            auth_request /auth;
+            auth_request_set $auth_status $upstream_status;
+            
+            add_header X-match-uri "/file";
+            add_header X-uri $1;
+            rewrite ^/file/(.*) /$1 break;
+            proxy_pass http://file_ms;
         }
 
         error_page 404 /404.html;
