--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -16,12 +16,12 @@ services:
     volumes:
       - '${CONFIG_DIR}/discovery_service/services.json:/app/discovery_service.json'
     entrypoint: node
-    command: /app/services/message-delivery/message-delivery-ms.js --app-name=message-delivery --user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE} --send-message-topic=${TOPIC_SEND_MESSAGE} --ack-topic=${TOPIC_ACK_MESSAGE} --offline-message-topic=${TOPIC_OFFLINE_MESSAGE} --service-discovery-path=/app/discovery_service.json --event-store=kafka --kafka-client-id=${MESSAGE_DELIVERY_CLIENT_ID:-message-delivery-1} --kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY} --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --cache-type=redis --redis-endpoint=${REDIS_ENDPOINT} --message-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth
+    command: /app/services/message-delivery/message-delivery-ms.js --app-name=message-delivery --user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE} --send-message-topic=${TOPIC_SEND_MESSAGE} --system-message-topic=${TOPIC_SYSTEM_MESSAGE} --offline-message-topic=${TOPIC_OFFLINE_MESSAGE} --service-discovery-path=/app/discovery_service.json --event-store=kafka --kafka-client-id=${MESSAGE_DELIVERY_CLIENT_ID:-message-delivery-1} --kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY} --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --cache-type=redis --redis-endpoint=${REDIS_ENDPOINT} --message-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth
 
   message_router:
     image: ramank775/chatserver:${CHAT_SERVER_TAG}
     entrypoint: node
-    command: /app/services/message-router-ms/message-router-ms.js --app-name=message-router-1 --send-message-topic=${TOPIC_SEND_MESSAGE} --new-message-topic=${TOPIC_NEW_MESSAGE} --ack-topic=${TOPIC_ACK_MESSAGE} --group-message-topic=${TOPIC_NEW_GROUP_MS} --event-store=kafka --kafka-client-id=${MESSAGE_ROUTER_CLIENT_ID:-message-router-1} --kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER} --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD}
+    command: /app/services/message-router-ms/message-router-ms.js --app-name=message-router-1 --send-message-topic=${TOPIC_SEND_MESSAGE} --new-message-topic=${TOPIC_NEW_MESSAGE} --system-message-topic=${TOPIC_SYSTEM_MESSAGE} --group-message-topic=${TOPIC_NEW_GROUP_MS} --event-store=kafka --kafka-client-id=${MESSAGE_ROUTER_CLIENT_ID:-message-router-1} --kafka-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER} --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD}
 
   profile:
     image: ramank775/chatserver:${CHAT_SERVER_TAG}
@@ -36,7 +36,7 @@ services:
   group_message_router:
     image: ramank775/chatserver:${CHAT_SERVER_TAG}
     entrypoint: node
-    command: /app/services/group-ms/group-message-router-ms.js --app-name=group-message-router-1 --new-group-message-topic=${TOPIC_NEW_GROUP_MS} --send-message-topic=${TOPIC_SEND_MESSAGE} --ack-topic=${TOPIC_ACK_MESSAGE} --event-store=kafka --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --kafka-client-id=${GROUP_MESSAGE_ROUTER_CLIENT_ID:-group-message-router-1} --kafka-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER} --group-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth
+    command: /app/services/group-ms/group-message-router-ms.js --app-name=group-message-router-1 --new-group-message-topic=${TOPIC_NEW_GROUP_MS} --send-message-topic=${TOPIC_SEND_MESSAGE} --system-message-topic=${TOPIC_SYSTEM_MESSAGE} --event-store=kafka --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --kafka-client-id=${GROUP_MESSAGE_ROUTER_CLIENT_ID:-group-message-router-1} --kafka-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER} --group-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth
 
   notification:
     image: ramank775/chatserver:${CHAT_SERVER_TAG}
