--- a/deployment/config/nginx/nginx.dev.conf
+++ b/deployment/config/nginx/nginx.dev.conf
@@ -49,69 +49,7 @@ http {
       proxy_set_header X-Original-URI $request_uri;
     }
 
-    location /v1.0/wss {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      rewrite /v1.0/wss / break;
-      proxy_pass http://connection_gateway;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection $connection_upgrade;
-      proxy_set_header Host $host;
-    }
-
-    location /v1.0/messages {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-      rewrite /v1.0/(.*) /$1 break;
-      proxy_pass http://connection_gateway;
-    }
-
-    location /v1.0/login {
-      rewrite /v1.0/(.*) /$1 break;
-      proxy_pass http://profile_ms;
-    }
-
-    location /v1.0/contactbook/sync {
-      rewrite /v1.0/(.*) /$1 break;
-      proxy_pass http://profile_ms;
-    }
-
-    location /v1.0/profile/(.*) {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      rewrite /v1.0/profile/(.*) /$1 break;
-      proxy_pass http://profile_ms;
-    }
-
-    location /v1.0/assets/(.*) {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-      
-      add_header X-match-uri "/assets";
-      add_header X-uri $1;
-      rewrite /v1.0/assets/(.*) /$1 break;
-      proxy_pass http://asset_ms;
-    }
-
-    location /v1.0/groups/(.*) {
-      auth_request /auth;
-      auth_request_set $auth_status $upstream_status;
-
-      add_header X-match-uri "/group";
-      add_header X-uri $1;
-
-      rewrite /v1.0/groups/(.*) /$1 break;
-      proxy_pass http://group_ms;
-    }
-
-    # @region depericated routes
-    # @deprecated
-    # Routes in the section below are deprecated
-    # Use /v1.0/{ROUTE} instead. 
-    # This route will be removed in next major release v3.x
+    rewrite /v1.0/(.*) /$1;
 
     location /wss/ {
       auth_request /auth;
@@ -140,7 +78,15 @@ http {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite ^/profile/(.*) /$1 break;
+      rewrite /profile/(.*) /$1 break;
+      proxy_pass http://profile_ms;
+    }
+
+    location ~ /contactbook/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      rewrite /v1.0/(.*) /$1 break;
       proxy_pass http://profile_ms;
     }
 
@@ -165,7 +111,26 @@ http {
       proxy_pass http://group_ms;
     }
 
-    # @endregion
+    location ~ /assets/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+      
+      add_header X-match-uri "/assets";
+      add_header X-uri $1;
+      rewrite /assets/(.*) /$1 break;
+      proxy_pass http://asset_ms;
+    }
+
+    location ~ /groups/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      add_header X-match-uri "/group";
+      add_header X-uri $1;
+
+      rewrite /groups/(.*) /$1 break;
+      proxy_pass http://group_ms;
+    }
 
     location / {
       index index.html;
