--- a/deployment/config/nginx/nginx.docker.conf
+++ b/deployment/config/nginx/nginx.docker.conf
@@ -74,6 +74,8 @@ http {
       proxy_set_header X-Original-URI $request_uri;
     }
 
+    rewrite /v1.0/(.*) /$1;
+
     location /wss/ {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
@@ -100,16 +102,16 @@ http {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite ^/profile/(.*) /$1 break;
+      rewrite /profile/(.*) /$1 break;
       proxy_pass http://profile_ms;
     }
 
-    location ~ /group/(.*) {
+    location ~ /contactbook/(.*) {
       auth_request /auth;
       auth_request_set $auth_status $upstream_status;
 
-      rewrite ^/group/(.*) /$1 break;
-      proxy_pass http://group_ms;
+      rewrite /v1.0/(.*) /$1 break;
+      proxy_pass http://profile_ms;
     }
 
     location ~ ^/file/(.*) {
@@ -119,7 +121,39 @@ http {
       add_header X-match-uri "/file";
       add_header X-uri $1;
       rewrite ^/file/(.*) /$1 break;
-      proxy_pass http://file_ms;
+      proxy_pass http://asset_ms;
+    }
+
+    location ~ ^/group/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      add_header X-match-uri "/group";
+      add_header X-uri $1;
+
+      rewrite ^/group/(.*) /$1 break;
+      proxy_pass http://group_ms;
+    }
+
+    location ~ /assets/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+      
+      add_header X-match-uri "/assets";
+      add_header X-uri $1;
+      rewrite /assets/(.*) /$1 break;
+      proxy_pass http://asset_ms;
+    }
+
+    location ~ /groups/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      add_header X-match-uri "/group";
+      add_header X-uri $1;
+
+      rewrite /groups/(.*) /$1 break;
+      proxy_pass http://group_ms;
     }
 
     error_page 404 /404.html;
