Refactor api path (#76)
* feat: :art: Added v1.0 api routes

* update nginx conf with api version v1.0

* fix: 🐛  auth validation issue

* updated open api spec

* updated package version

--- a/deployment/config/nginx/nginx.dev.conf
+++ b/deployment/config/nginx/nginx.dev.conf
@@ -15,94 +15,125 @@ http {
 	include /etc/nginx/conf.d/*.conf;
     
   map $http_upgrade $connection_upgrade {
-      default upgrade;
-      '' close;
+    default upgrade;
+    '' close;
   }
 
   upstream connection_gateway {
-      server 127.0.0.1:8000;
+    server 127.0.0.1:8000;
   }
 
   upstream profile_ms {
-      server 127.0.0.1:4000;
+    server 127.0.0.1:4000;
   }
 
-  upstream file_ms {
-      server 127.0.0.1:4001;
+  upstream asset_ms {
+    server 127.0.0.1:4001;
   }
 
   upstream group_ms {
-      server 127.0.0.1:4002;
+    server 127.0.0.1:4002;
   }
 
   server {
-      set_by_lua $nginx_docroot   'return os.getenv("NGINX_DOCROOT")';
-      root $nginx_docroot;
-      listen         0.0.0.0:8080;
+    set_by_lua $nginx_docroot   'return os.getenv("NGINX_DOCROOT")';
+    root $nginx_docroot;
+    listen         0.0.0.0:8080;
 
-      location /auth {
-          internal;
+    location /auth {
+      internal;
 
-          proxy_pass http://profile_ms;
-          proxy_pass_request_body off;
-          proxy_set_header Content-Length "";
-          proxy_set_header X-Original-URI $request_uri;
-      }
-      location /wss/ {
-          auth_request /auth;
-          auth_request_set $auth_status $upstream_status;
+      proxy_pass http://profile_ms;
+      proxy_pass_request_body off;
+      proxy_set_header Content-Length "";
+      proxy_set_header X-Original-URI $request_uri;
+    }
 
-          rewrite /wss/(.*) /$1 break;
-          proxy_pass http://connection_gateway;
-          proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection $connection_upgrade;
-          proxy_set_header Host $host;
-      }
+    rewrite /v1.0/(.*) /$1;
+
+    location /wss/ {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      rewrite /wss/(.*) /$1 break;
+      proxy_pass http://connection_gateway;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Host $host;
+    }
+
+    location /messages {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      proxy_pass http://connection_gateway;
+    }
+
+    location /login {
+      proxy_pass http://profile_ms;
+    }
+
+    location ~ /profile/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      rewrite /profile/(.*) /$1 break;
+      proxy_pass http://profile_ms;
+    }
+
+    location ~ /contactbook/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+
+      rewrite /v1.0/(.*) /$1 break;
+      proxy_pass http://profile_ms;
+    }
+
+    location ~ ^/file/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
       
-      location /messages {
-        auth_request /auth;
-        auth_request_set $auth_status $upstream_status;
+      add_header X-match-uri "/file";
+      add_header X-uri $1;
+      rewrite ^/file/(.*) /$1 break;
+      proxy_pass http://asset_ms;
+    }
 
-        proxy_pass http://connection_gateway;
-      }
+    location ~ ^/group/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
 
-      location /login {
-          proxy_pass http://profile_ms;
-      }
+      add_header X-match-uri "/group";
+      add_header X-uri $1;
 
-      location ~ /profile/(.*) {
-          auth_request /auth;
-          auth_request_set $auth_status $upstream_status;
+      rewrite ^/group/(.*) /$1 break;
+      proxy_pass http://group_ms;
+    }
 
-          rewrite ^/profile/(.*) /$1 break;
-          proxy_pass http://profile_ms;
-      }
+    location ~ /assets/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
+      
+      add_header X-match-uri "/assets";
+      add_header X-uri $1;
+      rewrite /assets/(.*) /$1 break;
+      proxy_pass http://asset_ms;
+    }
 
+    location ~ /groups/(.*) {
+      auth_request /auth;
+      auth_request_set $auth_status $upstream_status;
 
-      location ~ ^/file/(.*) {
-          auth_request /auth;
-          auth_request_set $auth_status $upstream_status;
-          
-          add_header X-match-uri "/file";
-          add_header X-uri $1;
-          rewrite ^/file/(.*) /$1 break;
-          proxy_pass http://file_ms;
-      }
+      add_header X-match-uri "/group";
+      add_header X-uri $1;
 
-      location ~ ^/group/(.*) {
-          auth_request /auth;
-          auth_request_set $auth_status $upstream_status;
+      rewrite /groups/(.*) /$1 break;
+      proxy_pass http://group_ms;
+    }
 
-          add_header X-match-uri "/group";
-          add_header X-uri $1;
-
-          rewrite ^/group/(.*) /$1 break;
-          proxy_pass http://group_ms;
-      }
-
-      location / {
-          index index.html;
-      }
+    location / {
+      index index.html;
+    }
   }
 }
