--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": ">12.0.0"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
     "@pm2/io": "^5.0.0",
     "aws-sdk": "^2.1120.0",
