--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-server",
-  "version": "2.6.1",
+  "version": "2.6.2",
   "description": "A chat server based on the microservice architecture to ensure high availability, high throughput, horizontal scalability using Kafka",
   "main": "",
   "repository": "https://github.com/ramank775/chat-server.git",
@@ -18,33 +18,33 @@
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
     "@pm2/io": "^5.0.0",
-    "aws-sdk": "^2.1120.0",
-    "commander": "^9.2.0",
-    "firebase-admin": "^10.1.0",
-    "ioredis": "^5.0.4",
+    "aws-sdk": "^2.1176.0",
+    "commander": "^9.4.0",
+    "firebase-admin": "^11.0.0",
+    "ioredis": "^5.2.0",
     "joi": "^17.6.0",
-    "kafkajs": "1.17.0-beta.5",
+    "kafkajs": "2.1.0",
     "moment": "^2.29.4",
-    "mongodb": "^4.5.0",
+    "mongodb": "^4.8.0",
     "node-fetch": "^2.6.6",
     "short-uuid": "^4.2.0",
-    "winston": "^3.7.2",
-    "ws": "^8.5.0"
+    "winston": "^3.8.1",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "7.16.11",
-    "eslint": "^8.14.0",
+    "@babel/core": "^7.18.6",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-env": "7.18.6",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "husky": "^7.0.4",
-    "prettier": "2.6.2"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
+    "prettier": "2.7.1"
   }
 }
