feat: added nats event store

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "kafkajs": "2.1.0",
     "moment": "^2.29.4",
     "mongodb": "^4.8.0",
+    "nats": "^2.7.1",
     "node-fetch": "^2.6.6",
     "short-uuid": "^4.2.0",
     "winston": "^3.8.1",
