--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Gateway MS",
+      "name": "Launch Gateway MS - Kafka",
       "program": "${workspaceFolder}/services/connection-gateway/gateway.js",
       "args": [
         "--app-name=ws-gateway-1",
@@ -27,7 +27,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Message Delivery MS",
+      "name": "Launch Message Delivery MS - Kafka",
       "program": "${workspaceFolder}/services/message-delivery/message-delivery-ms.js",
       "args": [
         "--app-name=message-delivery",
@@ -54,7 +54,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Message Router MS",
+      "name": "Launch Message Router MS - Kafka",
       "program": "${workspaceFolder}/services/message-router-ms/message-router-ms.js",
       "args": [
         "--app-name=message-router-1",
@@ -77,7 +77,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch profile MS",
+      "name": "Launch profile MS - Kafka",
       "program": "${workspaceFolder}/services/profile-ms/profile-ms.js",
       "args": [
         "--app-name=profile-ms-1",
@@ -99,27 +99,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch file MS",
-      "program": "${workspaceFolder}/services/file-ms/file-ms.js",
-      "args": [
-        "--app-name=file-ms-1",
-        "--debug",
-        "--port=4001",
-        "--file-metadata-db=mongo",
-        "--mongo-url=mongodb://localhost:27017/chat",
-        "--base-upload-dir=/workspace/upload",
-        "--s3-access-key-id=${S3_ACCESS_KEY_ID}",
-        "--s3-secret-access-key=${S3_SECRET_ACCESS_KEY}",
-        "--s3-bucket-name=${S3_BUCKET_NAME}",
-        "--file-storage=s3",
-      ],
-      "envFile": "${workspaceFolder}/.env",
-      "autoAttachChildProcesses": true
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch group MS",
+      "name": "Launch group MS - Kafka",
       "program": "${workspaceFolder}/services/group-ms/group-ms.js",
       "args": [
         "--app-name=group-ms-1",
@@ -137,7 +117,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Group Message Router MS",
+      "name": "Launch Group Message Router MS - Kafka",
       "program": "${workspaceFolder}/services/group-ms/group-message-router-ms.js",
       "args": [
         "--app-name=group-message-router-1",
@@ -158,7 +138,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch notification MS",
+      "name": "Launch notification MS - Kafka",
       "program": "${workspaceFolder}/services/notification-ms/notification-ms.js",
       "args": [
         "--app-name=notification-ms-1",
@@ -178,6 +158,162 @@
       ],
       "envFile": "${workspaceFolder}/.env",
       "autoAttachChildProcesses": true
-    }
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch file MS - Common",
+      "program": "${workspaceFolder}/services/file-ms/file-ms.js",
+      "args": [
+        "--app-name=file-ms-1",
+        "--debug",
+        "--port=4001",
+        "--file-metadata-db=mongo",
+        "--mongo-url=mongodb://localhost:27017/chat",
+        "--base-upload-dir=/workspace/upload",
+        "--s3-access-key-id=${S3_ACCESS_KEY_ID}",
+        "--s3-secret-access-key=${S3_SECRET_ACCESS_KEY}",
+        "--s3-bucket-name=${S3_BUCKET_NAME}",
+        "--file-storage=s3",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Gateway MS - Nats",
+      "program": "${workspaceFolder}/services/connection-gateway/gateway.js",
+      "args": [
+        "--app-name=ws-gateway-1",
+        "--debug",
+        "--gateway-name=gateway-1",
+        "--event-store=nats",
+        "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--nats-server-list=${NATS_SERVER_LIST}"
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true,
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Message Delivery MS - NATS",
+      "program": "${workspaceFolder}/services/message-delivery/message-delivery-ms.js",
+      "args": [
+        "--app-name=message-delivery",
+        "--debug",
+        "--mongo-url=${MONGO_URL}",
+        "--event-store=nats",
+        "--user-connection-state-topic=${TOPIC_USER_CONNECTION_STATE}",
+        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
+        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--service-discovery-path=${SERVICE_DISCOVERY_PATH}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+        "--nats-consumer-group=${CONSUMER_GROUP_MESSAGE_DELIVERY}",
+        "--cache-type=redis",
+        "--redis-endpoint=127.0.0.1:6379"
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Message Router MS - NATS",
+      "program": "${workspaceFolder}/services/message-router-ms/message-router-ms.js",
+      "args": [
+        "--app-name=message-router-1",
+        "--debug",
+        "--event-store=nats",
+        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--new-message-topic=${TOPIC_NEW_MESSAGE}",
+        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
+        "--group-message-topic=${TOPIC_NEW_GROUP_MS}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+        "--nats-consumer-group=${CONSUMER_GROUP_MESSAGE_ROUTER}",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch profile MS - NATS",
+      "program": "${workspaceFolder}/services/profile-ms/profile-ms.js",
+      "args": [
+        "--app-name=profile-ms-1",
+        "--debug",
+        "--port=4000",
+        "--auth-provider=mock",
+        "--mongo-url=${MONGO_URL}",
+        "--firebase-project-id=${FIREBASE_PROJECT_ID}",
+        "--event-store=nats",
+        "--new-login-topic=${TOPIC_NEW_LOGIN}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch group MS - NATS",
+      "program": "${workspaceFolder}/services/group-ms/group-ms.js",
+      "args": [
+        "--app-name=group-ms-1",
+        "--debug",
+        "--port=4002",
+        "--mongo-url=mongodb://localhost:27017/chat",
+        "--event-store=nats",
+        "--new-group-message-topic=${TOPIC_NEW_GROUP_MS}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Group Message Router MS - NATS",
+      "program": "${workspaceFolder}/services/group-ms/group-message-router-ms.js",
+      "args": [
+        "--app-name=group-message-router-1",
+        "--debug",
+        "--event-store=nats",
+        "--send-message-topic=${TOPIC_SEND_MESSAGE}",
+        "--new-group-message-topic=${TOPIC_NEW_GROUP_MS}",
+        "--system-message-topic=${TOPIC_SYSTEM_MESSAGE}",
+        "--persistence-message-topic=${TOPIC_DB_MESSAGE}",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+        "--nats-consumer-group=${CONSUMER_GROUP_GROUP_MESSAGE_ROUTER}",
+        "--mongo-url=${MONGO_URL}",
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch notification MS - NATS",
+      "program": "${workspaceFolder}/services/notification-ms/notification-ms.js",
+      "args": [
+        "--app-name=notification-ms-1",
+        "--debug",
+        "--mongo-url=${MONGO_URL}",
+        "--pn-service=mock",
+        "--firebase-admin-credential-json-path=${workspaceFolder}/${FIREBASE_ADMIN_CRED_JSON_PATH}",
+        "--event-store=nats",
+        "--nats-server-list=${NATS_SERVER_LIST}",
+        "--nats-consumer-group=notification-ms",
+        "--new-login-topic=${TOPIC_NEW_LOGIN}",
+        "--offline-message-topic=${TOPIC_OFFLINE_MESSAGE}",
+        "--db-app-initial=${PERSISTENCE_MESSAGE_MS_INITIAL}"
+      ],
+      "envFile": "${workspaceFolder}/.env",
+      "autoAttachChildProcesses": true
+    },
   ]
 }
