--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-server",
   "version": "2.7.0",
-  "description": "A chat server based on the microservice architecture to ensure high availability, high throughput, horizontal scalability using Kafka",
+  "description": "A chat server based on the microservice architecture to ensure high availability, high throughput, horizontal scalability.",
   "main": "",
   "repository": "https://github.com/ramank775/chat-server.git",
   "author": "Raman <raman.jay14@gmail.com>",
