--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   group:
     image: ramank775/chatserver:${CHAT_SERVER_TAG}
     entrypoint: node
-    command: /app/services/group-ms/group-ms.js --app-name=group-ms-1 --host=0.0.0.0 --port=4002 --new-group-message-topic=${TOPIC_NEW_GROUP_MS} --group-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth --event-store=${EVENT_STORE} --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --kafka-client-id=${GROUP_CLIENT_ID:-group-1} --nats-server-list=${NATS_SERVER_LIST} --nats-auth-type=${NATS_AUTH} --nats-auth-user=${NATS_USER} --nats-auth-pass=${NATS_PASS} --nats-auth-token=${NATS_AUTH_TOKEN} --nats-auth-nkey=${NATS_NKEY} --nats-auth-jwt=${NATS_USER_JWT}
+    command: /app/services/group-ms/group-ms.js --app-name=group-ms-1 --host=0.0.0.0 --port=4002 --system-message-topic=${TOPIC_SYSTEM_MESSAGE} --group-db=mongo --mongo-url=${MONGO_URL} --mongo-user=${MONGO_USER} --mongo-password=${MONGO_PASSWORD} --mongo-auth --event-store=${EVENT_STORE} --kafka-broker-list=${BROKER_LIST} --kafka-security-protocol=${KAFKA_SECURITY_PROTOCOL} --kafka-sasl-username=${KAFKA_SASL_USERNAME} --kafka-sasl-password=${KAFKA_SASL_PASSWORD} --kafka-client-id=${GROUP_CLIENT_ID:-group-1} --nats-server-list=${NATS_SERVER_LIST} --nats-auth-type=${NATS_AUTH} --nats-auth-user=${NATS_USER} --nats-auth-pass=${NATS_PASS} --nats-auth-token=${NATS_AUTH_TOKEN} --nats-auth-nkey=${NATS_NKEY} --nats-auth-jwt=${NATS_USER_JWT}
 
   group_message_router:
     image: ramank775/chatserver:${CHAT_SERVER_TAG}
