fix: added channel in message

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -84,7 +84,7 @@
         "--app-name=profile-ms-1",
         "--debug",
         "--port=4000",
-        "--auth-provider=mock",
+        "--auth-provider=${AUTH_PROVIDER}",
         "--mongo-url=${MONGO_URL}",
         "--firebase-project-id=${FIREBASE_PROJECT_ID}",
         "--event-store=kafka",
@@ -145,7 +145,7 @@
         "--app-name=notification-ms-1",
         "--debug",
         "--mongo-url=${MONGO_URL}",
-        "--pn-service=mock",
+        "--pn-service=${PN_SERVICE}",
         "--firebase-admin-credential-json-path=${workspaceFolder}/${FIREBASE_ADMIN_CRED_JSON_PATH}",
         "--event-store=kafka",
         "--kafka-broker-list=${BROKER_LIST}",
@@ -249,7 +249,7 @@
         "--app-name=profile-ms-1",
         "--debug",
         "--port=4000",
-        "--auth-provider=mock",
+        "--auth-provider=${AUTH_PROVIDER}",
         "--mongo-url=${MONGO_URL}",
         "--firebase-project-id=${FIREBASE_PROJECT_ID}",
         "--event-store=nats",
@@ -305,7 +305,7 @@
         "--app-name=notification-ms-1",
         "--debug",
         "--mongo-url=${MONGO_URL}",
-        "--pn-service=mock",
+        "--pn-service=${PN_SERVICE}",
         "--firebase-admin-credential-json-path=${workspaceFolder}/${FIREBASE_ADMIN_CRED_JSON_PATH}",
         "--event-store=nats",
         "--nats-server-list=${NATS_SERVER_LIST}",
