--- a/deployment/config/firebase/service.json.example
+++ b/deployment/config/firebase/service.json.example
@@ -1,12 +1,12 @@
 {
   "type": "service_account",
-  "project_id": "vartalap-bef91",
+  "project_id": "vartalap-dev",
   "private_key_id": "",
   "private_key": "",
-  "client_email": "firebase-adminsdk-6b7gr@vartalap-bef91.iam.gserviceaccount.com",
+  "client_email": "firebase-adminsdk-6b7gr@vartalap-dev.iam.gserviceaccount.com",
   "client_id": "",
   "auth_uri": "https://accounts.google.com/o/oauth2/auth",
   "token_uri": "https://oauth2.googleapis.com/token",
   "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-  "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-6b7gr%40vartalap-bef91.iam.gserviceaccount.com"
+  "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-6b7gr%40vartalap-dev.iam.gserviceaccount.com"
 }
